--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -10,11 +10,12 @@
 //</Подключаем шрифты>=======================================================================================
 
 //<Иконочные шрифты>==========================================================================================
-//@import "icons";
+@import "icons";
 //</Иконочные шрифты>==========================================================================================
 
 //<Шрифт по умолчанию>==========================================================================================
-$fontFamily: "";
+$fontFamily: "Gilroy";
+$fontSize: 14;
 //</Шрифт по умолчанию>==========================================================================================
 
 //</ШРИФТЫ>=======================================================================================================
@@ -33,7 +34,6 @@ $md4: 479.98;
 @import "null";
 body {
 	color: #000;
-	font-size: 14px;
 	&._lock {
 		overflow: hidden;
 	}
