--- a/#src/scss/icons.scss
+++ b/#src/scss/icons.scss
@@ -25,7 +25,12 @@
 	}
 }
 
-._icon-f:before { content: "\EA01"; }
-._icon-feather_edit:before { content: "\EA02"; }
-._icon-Group 18:before { content: "\EA03"; }
-._icon-Group 70:before { content: "\EA04"; }
+._icon-instagram:before {
+	content: "\e900";
+}
+._icon-facebook:before {
+	content: "\e901";
+}
+._icon-vk:before {
+	content: "\e902";
+}
