--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -1,12 +1,120 @@
 //====================================================================================================
+.header {
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	background-color: rgba(0,0,0,0.8);
+	&__menu {
+	}
+	&__footer {
+		display: none;
+	}
+}
 
+.menu {
+	padding: 15px 0;
+	min-height: 50px;
+	display: flex;
+	align-items: center;
+	&__body {
+		&::before {
+			display: none;
+			content: '';
+			position: fixed;
+			left: 0;
+			top: 0;
+			bottom: 0;
+			right: 0;
+			background-color: rgba(0, 0, 0, 0.7);
+		}
+		@media (max-width: $md2+px) {
+			overflow: auto;
+			position: fixed;
+			display: flex;
+			flex-direction: column;
+			justify-content: flex-end;
+			min-width: 260px;
+			height: 100%;
+			top: 0;
+			right: -100%;
+			background-color: rgba(0, 0, 0);
+			transition: right 0.3s ease 0s;
+			padding: 70px 40px 38px;
+			&::after {
+				content: '';
+				z-index: 5;
+				position: fixed;
+				top: 0;
+				right: -100%;
+				width: 100%;
+				height: 50px;
+				background-color: #000;
+				transition: right 0.3s ease 0s;
+			}
+			&._active {
+				right: 0;
+				&::after {
+					right: 0;
+				}
+				&::before {
+					display: block;
+				}
+
+				& .header__footer {
+					display: block;
+					z-index: 5;
+				}
+			}
+		}
+	}
+	&__list {
+		font-weight: 500;
+		z-index: 5;
+		flex: 1 1 auto;
+		li {
+			@media (max-width: $md2+px) {
+				&:not(:last-child) {
+					margin-bottom: 20px;
+				}
+			}
+		}
+		@media (min-width: $md2+px) {
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			flex-wrap: wrap;
+			li {
+				transition: opacity 0.3s ease 0s;
+				padding: 5px 0;
+				&:hover {
+					opacity: 0.7;
+				};
+				&:not(:last-child) {
+					margin-right: 33px;
+				}
+			}
+		}
+	}
+
+	&__link {
+		color: #fff;
+		&.active {
+			opacity: 0.7;
+		}
+		@media (max-width: $md2+px) {
+			font-size: 28px;
+			margin-bottom: 15px;
+		}
+	}
+}
 //====================================================================================================
 
-/*
+
 //Burger
 .icon-menu {
 	display: none;
-	@media (max-width: $md3+px) {
+	@media (max-width: $md2+px) {
 		display: block;
 		position: absolute;
 		top: 18px;
@@ -18,17 +126,17 @@
 		span {
 			transition: all 0.3s ease 0s;
 			top: calc(50% - 1px);
-			left: 0px;
+			left: 0;
 			position: absolute;
 			width: 100%;
 			height: 2px;
-			background-color: #000;
+			background-color: #ffffff;
 			&:first-child {
-				top: 0px;
+				top: 0;
 			}
 			&:last-child {
 				top: auto;
-				bottom: 0px;
+				bottom: 0;
 			}
 		}
 		&._active {
@@ -46,4 +154,3 @@
 		}
 	}
 }
-*/
