--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -56,6 +56,7 @@ body {
 ._container {
 	max-width: $maxWidthContainer + px;
 	margin: 0 auto;
+	padding: 0 15px;
 }
 //</ОСНОВНАЯ СЕТКА>===========================================================================================================
 
