--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -26,7 +26,7 @@
 			top: 0;
 			bottom: 0;
 			right: 0;
-			background-color: rgba(0, 0, 0, 0.7);
+			background-color: rgba(0, 0, 0, 0.3);
 		}
 		@media (max-width: $md2+px) {
 			overflow: auto;
@@ -99,6 +99,7 @@
 
 	&__link {
 		color: #fff;
+		text-transform: uppercase;
 		&.active {
 			opacity: 0.7;
 		}
