--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -1,3 +1,53 @@
 //====================================================================================================
+.intro {
+  height: 600px;
+  padding-top: 50px;
+  &__body {
+    display: flex;
+  }
+
+  &__content {
+    flex: 0 1 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__main-image {
+
+  }
+
+  &__logo {
+    padding-bottom: 48%;
+    padding-left: 70%;
+  }
+
+  &__text {
+    @include adaptiv-value('font-size', 27, 14, 1);
+    color: #FFF;
+    text-align: center;
+  }
+
+  &__labels {
+    align-self: stretch;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  &__image {
+    padding: 10px;
+    img {
+      width: 50px;
+      height: 50px;
+    }
+    @media (min-width: $md3+px) {
+      img {
+        width: 70px;
+        height: 70px;
+      }
+    }
+  }
+}
 
 //====================================================================================================
