--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -15,7 +15,6 @@
 
 //<Шрифт по умолчанию>==========================================================================================
 $fontFamily: "Gilroy";
-$fontSize: 14;
 //</Шрифт по умолчанию>==========================================================================================
 
 //</ШРИФТЫ>=======================================================================================================
@@ -38,6 +37,7 @@ body {
 	background-position: 0 0;
 	background-repeat: repeat;
 	color: #000;
+	@include adaptiv-value('font-size', 18, 14, 1);
 	&._lock {
 		overflow: hidden;
 	}
