--- a/#src/scss/ui.scss
+++ b/#src/scss/ui.scss
@@ -1,4 +1,33 @@
 //<ОСНОВНОЙ БЛОК>====================================================================================================
+.divider {
+	background-color: #f0f0f0;
+	&__line {
+		height: 1px;
+		width: 80%;
+		margin: 0 auto;
+		padding: 0 10%;
+		position: relative;
+		background: #000;
+		opacity: 0.2;
+		&:before, &:after {
+			content: '';
+			position: absolute;
+			top: 0;
+			height: 1px;
+			width: 20%;
+			background: #000;
+		}
+		&:before {
+			background: linear-gradient(90deg, rgba(255,255,255,0.742734593837535) 0%, rgba(0,0,0,0.9808298319327731) 100%);
+			left: 0;
+		}
+		&:after {
+			right: 0;
+			background: linear-gradient(90deg, rgba(0,0,0,0.9808298319327731) 0%, rgba(255,255,255,0.742734593837535) 100%);
+		}
+	}
+}
+
 .title {
 	@include adaptiv-value('font-size', 42, 24, 1);
 	line-height: 1.23;
