--- a/#src/scss/forms.scss
+++ b/#src/scss/forms.scss
@@ -18,14 +18,23 @@
 
 //<BUTTONS (a.btn+tab)>====================================================================================================
 .btn {
+	font-size: 18px;
+	color: #FFF;
+	background-color: #333;
 	display: inline-flex;
-	padding: 0px 0px;
-	@media (min-width: 992px) {
+	text-align: center;
+	align-items: center;
+	justify-content: center;
+	padding: 0 15px;
+	border: 1px solid #e89f71;
+	min-width: 245px;
+	min-height: 48px;
+	transition: all .3s ease 0s;
+	@media (any-hover: hover) {
 		&:hover {
+			color: #333;
+			background-color: #c6c6c6;
 		}
-	}
-	&._fw {
-		width: 100%;
 	}
 }
 //</BUTTONS>====================================================================================================
