Program section finished

--- a/#src/scss/ui.scss
+++ b/#src/scss/ui.scss
@@ -35,6 +35,17 @@
 	text-align: center;
 }
 
+.pb100 {
+	padding-bottom: 100%;
+}
+.pb140 {
+	padding-bottom: 140%;
+}
+.pb177 {
+	padding-bottom: 177%;
+}
+
+
 .social {
 	font-size: 45px;
 	display: flex;
