--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -190,7 +190,6 @@
     }
   }
 }
-
 .item-member {
   max-width: 345px;
   padding: 10px 10px;
@@ -256,6 +255,81 @@
         height: auto;
         opacity: 1;
       }
+    }
+  }
+}
+//====================================================================================================
+
+//========PROGRAM============================================================================================
+.program {
+  background-color: #f0f0f0;
+  @include adaptiv-value('padding-top', 60, 40, 1);
+  @include adaptiv-value('padding-bottom', 60, 40, 1);
+  &__title {
+    text-align: center;
+    text-transform: uppercase;
+    margin-bottom: 1.2em;
+  }
+  &__body {
+
+  }
+  &__billboard {
+    &:not(:last-child) {
+      margin-bottom: 5em;
+    }
+  }
+}
+
+.billboard {
+  &__header {
+    font-weight: 600;
+    @include adaptiv-value('font-size', 24, 16, 1);
+    display: flex;
+    margin-bottom: 1em;
+    @media (max-width: $md4+px) {
+      flex-direction: column;
+      align-items: center;
+    }
+  }
+
+  &__date {
+    flex: 0 0 20%;
+  }
+
+  &__title {
+    padding: 0 15px;
+    text-align: center;
+    flex: 1 1 auto;
+  }
+
+  &__content {
+    display: flex;
+  }
+
+  &__images {
+    flex: 0 0 20%;
+    @media (max-width: $md4+px) {
+      display: none;
+    }
+  }
+
+  &__program {
+    flex: 1 1 auto;
+    p {
+      margin-bottom: 1.5em;
+    }
+  }
+
+  &__image-item {
+    &:not(:last-child) {
+      margin-bottom: 20px;
+    }
+  }
+
+  &__program {
+    padding: 0 35px;
+    @media (max-width: $md4+px) {
+      padding: 0 10px;
     }
   }
 }
