--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -334,3 +334,32 @@
   }
 }
 //====================================================================================================
+
+//==========REGISTRATION==========================================================================================
+.registration {
+  @include adaptiv-value('padding-top', 50, 30, 1);
+  @include adaptiv-value('padding-bottom', 50, 30, 1);
+  background-color: #FFF;
+
+  &__title {
+    @include adaptiv-value('font-size', 28, 18, 1);
+    font-weight: 600;
+    display: block;
+    text-align: center;
+
+    a {
+      text-transform: uppercase;
+      text-decoration: underline;
+      color: #ff8562;
+      font-weight: 700;
+      transition: color 0.3s ease 0s;
+      @media (any-hover: hover) {
+        &:hover {
+          color: inherit;;
+        }
+      }
+    }
+  }
+}
+//====================================================================================================
+
