--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -355,7 +355,7 @@
       transition: color 0.3s ease 0s;
       @media (any-hover: hover) {
         &:hover {
-          color: inherit;;
+          color: #333;;
         }
       }
     }
@@ -363,3 +363,69 @@
 }
 //====================================================================================================
 
+//==========PARTNERS==========================================================================================
+.partners {
+  @include adaptiv-value('padding-top', 60, 40, 1);
+  @include adaptiv-value('padding-bottom', 60, 40, 1);
+  background-color: #f0f0f0;
+  &__item {
+    &:not(:last-child) {
+      margin-bottom: 2em;
+    }
+    &:not(:first-child) {
+      margin-top: 2em;
+    }
+  }
+}
+
+.item-partners {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  &__title {
+    margin-bottom: 1.5em;
+  }
+
+  &__intro {
+    @include adaptiv-value('font-size', 24, 16, 1);
+    max-width: 560px;
+    text-align: center;
+    margin-bottom: 1.5em;
+  }
+
+  &__logos {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  &__logo {
+
+  }
+
+  &__image {
+    flex: 0 0 210px;
+    height: 210px;
+    padding: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    @media (max-width: $md3+px) {
+      flex: 0 0 170px;
+      height: 170px;
+      padding: 15px;
+    }
+    @media (max-width: $md4+px) {
+      flex: 0 0 120px;
+      height: 120px;
+      padding: 5px;
+    }
+    img {
+      max-width: 90%;
+      margin: 0 auto;
+    }
+  }
+}
+//====================================================================================================
