--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -401,10 +401,6 @@
     justify-content: center;
   }
 
-  &__logo {
-
-  }
-
   &__image {
     flex: 0 0 210px;
     height: 210px;
@@ -425,6 +421,40 @@
     img {
       max-width: 90%;
       margin: 0 auto;
+    }
+  }
+}
+//====================================================================================================
+
+//========MAP============================================================================================
+.map {
+  @include adaptiv-value('padding-top', 60, 40, 1);
+  @include adaptiv-value('padding-bottom', 60, 40, 1);
+  &__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #FFF;
+  }
+  &__title {
+    text-align: center;
+    margin-bottom: 1em;
+  }
+
+  &__description {
+    line-height: 140%;
+    margin-bottom: 2em;
+    max-width: 760px;
+    text-align: center;
+  }
+  &__dest {
+    width: 100%;
+    height: 500px;
+    @media (max-width: $md3+px) {
+      height: 400px;
+    }
+    @media (max-width: $md4+px) {
+      height: 300px;
     }
   }
 }
