--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -1,4 +1,30 @@
-footer{}
+.footer {
+  background-color: #f0f0f0;
+  text-align: center;
+  padding: 50px 0;
+  @media (max-width: $md3+px) {
+    padding: 30px 0;
+  }
+  &__social {
+    margin: 0 0 25px 0;
+    justify-content: center;
+  }
+  &__copy {
+    font-size: 13px;
+    color: #8c94a7;
+    padding: 20px 0 10px 0;
+    text-align: center;
+  }
+}
+.social-footer {
+  display: flex;
+  justify-content: center;
+  &__item {
+    font-size: 40px;
+    padding: 0 10px;
+    color: inherit;
+  }
+}
 //====================================================================================================
 
 //====================================================================================================
