--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -281,6 +281,7 @@
 }
 
 .billboard {
+
   &__header {
     font-weight: 600;
     @include adaptiv-value('font-size', 24, 16, 1);
@@ -324,6 +325,42 @@
     &:not(:last-child) {
       margin-bottom: 20px;
     }
+    @media (any-hover: hover) {
+      &:hover {
+        .billboard__overlay {
+          opacity: 0.7;
+          visibility: visible;
+        }
+      }
+    }
+  }
+  &__overlay {
+    transition: all 0.4s ease 0s;
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 2;
+    background-color: #000;
+    opacity: 0;
+    visibility: hidden;
+    cursor:pointer;
+  }
+
+  &__button {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #ffffff;
+    font-size: 18px;
+    border-radius: 50%;
+    height: 45px;
+    width: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
   }
 
   &__program {
