--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -278,8 +278,43 @@
       margin-bottom: 5em;
     }
   }
+
+
 }
 
+.program-modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  &__close {
+    position: absolute;
+    top: 15px;
+    right: 35px;
+    color: #f1f1f1;
+    font-size: 40px;
+    font-weight: bold;
+    transition: 0.3s;
+    &:hover, &:focus {
+      color: #bbb;
+      text-decoration: none;
+      cursor: pointer;
+    }
+  }
+  &__modal-content{
+    margin: auto;
+    display: block;
+    width: 80%;
+    max-width: 700px;
+  }
+}
 .billboard {
 
   &__header {
