--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -283,23 +283,22 @@
 }
 
 .program-modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  position: fixed;
+  z-index: 10;
+  padding-top: 70px;
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.8);
   &__close {
     position: absolute;
-    top: 15px;
+    top: 5%;
     right: 35px;
     color: #f1f1f1;
-    font-size: 40px;
+    font-size: 70px;
     font-weight: bold;
     transition: 0.3s;
     &:hover, &:focus {
@@ -308,11 +307,11 @@
       cursor: pointer;
     }
   }
-  &__modal-content{
+  &__content {
     margin: auto;
     display: block;
-    width: 80%;
-    max-width: 700px;
+    width: 70%;
+    max-width: 650px;
   }
 }
 .billboard {
@@ -366,6 +365,10 @@
           opacity: 0.7;
           visibility: visible;
         }
+        .billboard__button {
+          opacity: 0.7;
+          visibility: visible;
+        }
       }
     }
   }
@@ -384,6 +387,7 @@
   }
 
   &__button {
+    z-index: 2;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -396,6 +400,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    visibility: hidden;
+    cursor:pointer;
+    @media (max-width: $md2+px) {
+      opacity: 0.7;
+      visibility: visible;
+    }
   }
 
   &__program {
