--- a/#src/scss/ui.scss
+++ b/#src/scss/ui.scss
@@ -1,4 +1,8 @@
 //<ОСНОВНОЙ БЛОК>====================================================================================================
+._hide {
+	display: none;
+}
+
 .divider {
 	background-color: #f0f0f0;
 	&__line {
