--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -36,6 +36,7 @@ body {
 	background-size: auto;
 	background-position: 0 0;
 	background-repeat: repeat;
+	background-attachment:fixed;
 	color: #000;
 	@include adaptiv-value('font-size', 18, 14, 1);
 	&._lock {
