--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -278,9 +278,13 @@
       margin-bottom: 5em;
     }
   }
+}
 
+/* Add Animation */
+.modal-content {
 
 }
+
 
 .program-modal {
   position: fixed;
@@ -312,10 +316,24 @@
     display: block;
     width: 70%;
     max-width: 650px;
+    -webkit-animation-name: zoom;
+    -webkit-animation-duration: 0.6s;
+    animation-name: zoom;
+    animation-duration: 0.6s;
   }
 }
-.billboard {
 
+@-webkit-keyframes zoom {
+  from {-webkit-transform:scale(0)}
+  to {-webkit-transform:scale(1)}
+}
+
+@keyframes zoom {
+  from {transform:scale(0)}
+  to {transform:scale(1)}
+}
+
+.billboard {
   &__header {
     font-weight: 600;
     @include adaptiv-value('font-size', 24, 16, 1);
