--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -100,7 +100,7 @@
 	&__link {
 		color: #fff;
 		text-transform: uppercase;
-		&.active {
+		&._active {
 			opacity: 0.7;
 		}
 		@media (max-width: $md2+px) {
