--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -551,6 +551,7 @@
     width: 100%;
     height: 500px;
     @media (max-width: $md3+px) {
+      padding: 0 35px;
       height: 400px;
     }
     @media (max-width: $md4+px) {
