--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -78,6 +78,7 @@ body {
 @import "header";
 @import "footer";
 @import "home";
+@import "reviews";
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
 
 //<ОСНОВНОЙ БЛОК>====================================================================================================
