Add photos page

--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -79,6 +79,7 @@ body {
 @import "footer";
 @import "home";
 @import "reviews";
+@import "photos";
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
 
 //<ОСНОВНОЙ БЛОК>====================================================================================================
