Our team page finished

--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -1,7 +1,6 @@
 //====INTRO================================================================================================
 .intro {
-  //height: 600px;
-  border: 1px solid #fff;
+  border-bottom: 1px solid #fff;
   padding-top: 80px;
   &__body {
     display: flex;
