--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -80,6 +80,7 @@ body {
 @import "home";
 @import "reviews";
 @import "photos";
+@import "team";
 //</ПОДКЛЮЧЕНИЕ ФАЙЛОВ СТИЛЕЙ СТРАНИЦ И ЭЛЕМЕНТОВ>====================================================================================================
 
 //<ОСНОВНОЙ БЛОК>====================================================================================================
