--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -6,6 +6,9 @@
 	width: 100%;
 	background-color: rgba(0,0,0,0.8);
 	z-index: 5;
+	@media (max-width: $md2+px) {
+		background-color: rgba(0,0,0,0);
+	}
 	&__footer {
 		display: none;
 	}
@@ -45,7 +48,6 @@
 				position: fixed;
 				top: 0;
 				right: -100%;
-				width: 100%;
 				height: 50px;
 				background-color: #000;
 				transition: right 0.3s ease 0s;
@@ -116,14 +118,24 @@
 .icon-menu {
 	display: none;
 	@media (max-width: $md2+px) {
-		display: block;
 		position: absolute;
-		top: 18px;
-		right: 10px;
+		top: 25px;
+		right: 20px;
 		width: 30px;
 		height: 18px;
 		cursor: pointer;
 		z-index: 5;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		&:before {
+			content: '';
+			position: absolute;
+			border-radius: 50%;
+			width: 48px;
+			height: 48px;
+			background-color: rgba(17, 17, 17, 0.5);
+		}
 		span {
 			transition: all 0.3s ease 0s;
 			top: calc(50% - 1px);
