--- a/#src/scss/home.scss
+++ b/#src/scss/home.scss
@@ -140,6 +140,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 20px;
     img {
       max-width: 160px;
       max-height: 70px;
