--- a/#src/scss/header.scss
+++ b/#src/scss/header.scss
@@ -93,9 +93,21 @@
 					opacity: 0.7;
 				};
 				&:not(:last-child) {
-					margin-right: 33px;
+					margin-right: 25px;
 				}
 			}
+		}
+	}
+
+	&__item-history {
+		display: none;
+		img {
+			width: 40px;
+			height: 40px;
+		}
+
+		@media (min-width: $md2+px) {
+			display: block;
 		}
 	}
 
@@ -165,5 +177,68 @@
 				}
 			}
 		}
+	}
+}
+
+.history {
+	padding: 50px 50px;
+	content: "";
+	z-index: 5;
+	position: fixed;
+	top: 0;
+	right: -200%;
+	height: 100%;
+	background-color: #000;
+	transition: right .3s ease 0s;
+
+	@media (max-width: $md2+px) {
+		display: none;
+	}
+
+	&._active {
+		right: 0;
+	}
+
+	&__list {
+		margin-bottom: 25px;
+	}
+
+	&__item {
+		&:not(:last-child) {
+			margin-bottom: 35px;
+		}
+	}
+
+	&__link {
+		display: block;
+		position: relative;
+		color: #FFFFFF;
+		border: 1px solid #fff;
+		border-radius: 5px;
+		overflow: hidden;
+		transition: opacity .3s ease 0s;
+
+		&:hover {
+			opacity: 0.5;
+		}
+	}
+
+	&__image {
+		width: 300px;
+	}
+
+	&__year {
+		position: absolute;
+		left: 0;
+		right: 0;
+		top: 0;
+		bottom: 0;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		font-size: 56px;
+		font-weight: 600;
+		opacity: 0.8;
+		letter-spacing: 5px;
 	}
 }
